# master_thesis

caffe_test/caffe_test/: CMakeLists.txt
caffe_test/caffe_test/include/: classify.h
caffe_test/caffe_test/src/: classify.cpp  main.cpp
cityscapes_labeller/cityscapes_labeler/: CMakeLists.txt  cityscapes_labeller  cityscapes_manager.cpp  cityscapes_manager.h  cityscapes_widgets.cpp  cityscapes_widgets.h  display_window.cpp  display_window.h  display_window.ui  main.cpp
object_index_viewer/object_index_view/: CMakeLists.txt  main.cpp  object_index_view
